--- a/frontend/src/appPages/site/components/layout/header/Header.module.scss
+++ b/frontend/src/appPages/site/components/layout/header/Header.module.scss
@@ -76,6 +76,7 @@
 
     input {
       padding: 10px;
+      width: 110px;
       border: 2px solid #fff;
       border-top-left-radius: 12px;
       border-bottom-left-radius: 12px;
@@ -267,7 +268,7 @@
     }
 
     .hamburger {
-      font-size: 40px;
+      font-size: 46px;
       display: flex;
     }
 
@@ -344,13 +345,13 @@
     .hamburger {
       display: flex;
       align-items: center;
-      font-size: 50px;
+      font-size: 48px;
       color: #640ea7;
       cursor: pointer;
     }
 
     .search {
-      display: none;
+      display: block;
     }
 
     .logo {
