--- a/frontend/src/appPages/site/components/pages/home/HeroContent/HeroContent.module.scss
+++ b/frontend/src/appPages/site/components/pages/home/HeroContent/HeroContent.module.scss
@@ -1,5 +1,6 @@
 #content {
-  background: url("../../../../../../assets/images/6W3A8933.JPG") no-repeat center/cover;
+  background: url("../../../../../../assets/images/6W3A8933.JPG") no-repeat
+    center/cover;
   min-height: 100vh;
   position: relative;
 
@@ -13,42 +14,15 @@
   .profileImage {
     display: flex;
     align-items: center;
-    justify-content: center;
     gap: 20px;
     position: relative;
-
     img {
       position: absolute;
-      top: -10px;
+      top: -10;
       border: 4px solid #fff;
       border-radius: 50%;
       width: 200px;
       height: 200px;
-      transition: opacity 0.5s ease-in-out;
-      opacity: 0;
-    }
-
-    .loaded {
-      opacity: 1; // Анимация появления изображения
-    }
-
-    .loader {
-      position: absolute;
-      width: 50px;
-      height: 50px;
-      border: 4px solid #fff;
-      border-top: 4px solid #56397b; // Цвет части спиннера
-      border-radius: 50%;
-      animation: spin 1s linear infinite;
-    }
-  }
-
-  @keyframes spin {
-    0% {
-      transform: rotate(0deg);
-    }
-    100% {
-      transform: rotate(360deg);
     }
   }
 
@@ -59,9 +33,8 @@
     flex-direction: column;
     color: #fff;
     gap: 10px;
-
     h1 {
-      font-size: 48px;
+      font-size: 48px !important;
       font-weight: 700;
     }
 
@@ -80,128 +53,118 @@
   }
 }
 
-/* Larger screens */
-@media (max-width: 884px) {
-  #content {
-    .text {
-      padding: 20px;
-      text-align: center;
-
-      h1 {
-        font-size: 56px;
-      }
-
-      h2 {
-        font-size: 38px;
-      }
-    }
-
-    .profileImage {
-      display: flex;
-      justify-content: center;
-
-      img {
-        top: -180px;
-        width: 180px;
-        height: 180px;
-      }
-    }
-
-    .subtext {
-      padding: 170px;
-    }
-  }
-}
-
 /* Tablet view */
 @media (max-width: 768px) {
   #content {
     .text {
       padding: 0;
       text-align: center;
-
       h1 {
-        font-size: 36px;
+        font-size: 56px;
       }
 
       h2 {
-        font-size: 26px;
+        font-size: 36px;
+      }
+    }
+    .profileImage {
+      display: flex;
+      justify-content: center;
+      img {
+        top: -200 !important;
+        width: 200px !important;
+        height: 200px !important;
+      }
+    }
+    .subtext {
+      padding: 170px !important;
+    }
+  }
+}
+
+@media (max-width: 430px) {
+  #content {
+    .profileImage {
+      display: flex;
+      justify-content: center;
+      img {
+        top: -130 !important;
+        width: 150px !important;
+        height: 150px !important;
+      }
+    }
+    .text {
+      padding: 0;
+      text-align: center;
+      h1 {
+        font-size: 26px !important;
+        padding-top: 10px !important;
+      }
+      h2 {
+        font-size: 20px !important;
+      }
+    }
+
+    .subtext {
+      padding: 110px !important;
+    }
+  }
+}
+
+@media (max-width: 320px) {
+  #content {
+    .profileImage {
+      display: flex;
+      justify-content: center;
+      img {
+        top: -74 !important;
+        width: 100px !important;
+        height: 100px !important;
+      }
+    }
+    .text {
+      padding-top: 20px !important;
+
+      h1 {
+        font-size: 20px !important;
+      }
+      h2 {
+        font-size: 16px !important;
+      }
+    }
+
+    .subtext {
+      padding: 88px !important;
+    }
+  }
+}
+
+/* Larger screens */
+@media (max-width: 884px) {
+  #content {
+    .text {
+      padding: 20;
+      text-align: center;
+      h1 {
+        font-size: 64px;
+      }
+      h2 {
+        font-size: 42px;
       }
     }
 
     .profileImage {
       display: flex;
       justify-content: center;
-
       img {
-        top: -150px;
-        width: 150px;
-        height: 150px;
+        top: -240;
+        width: 200px;
+        height: 200px;
       }
     }
 
     .subtext {
-      padding: 70px;
-    }
-  }
-}
-
-/* Mobile view (small screens) */
-@media (max-width: 430px) {
-  #content {
-    .profileImage {
-      img {
-        top: -90px;
-        width: 120px;
-        height: 120px;
-      }
-    }
-
-    .text {
-      padding: 0;
-      text-align: center;
-
-      h1 {
-        font-size: 26px;
-        padding-top: 10px;
-      }
-
-      h2 {
-        font-size: 20px;
-      }
-    }
-
-    .subtext {
-      padding: 50px;
-    }
-  }
-}
-
-/* Very small screens */
-@media (max-width: 320px) {
-  #content {
-    .profileImage {
-      img {
-        top: -60px;
-        width: 100px;
-        height: 100px;
-      }
-    }
-
-    .text {
-      padding-top: 20px;
-
-      h1 {
-        font-size: 20px;
-      }
-
-      h2 {
-        font-size: 16px;
-      }
-    }
-
-    .subtext {
-      padding: 40px;
+      padding: 190px;
     }
   }
 }
