--- a/frontend/src/appPages/site/components/pages/home/GraduatesContent/GraduatesContent.module.scss
+++ b/frontend/src/appPages/site/components/pages/home/GraduatesContent/GraduatesContent.module.scss
@@ -1,6 +1,9 @@
 .content {
   background-color: #fff6f6;
   padding: 50px 0;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
 
   h1 {
     color: #333333;
@@ -75,30 +78,23 @@
         height: 100%;
       }
     }
+  }
 
-    .buttonContainer {
-      display: flex;
-      justify-content: center;
-      margin-top: 20px;
-    }
-
-    .button {
-      width: 100%;
-      max-width: 180px;
-      padding: 16px;
-      background: #6a00a1;
-      border-radius: 16px;
-      color: #fff;
-      font-weight: 400;
-      font-size: 16px;
-      cursor: pointer;
-      border: none;
-      text-align: center;
-
-      &:hover {
-        transform: scale(1.01);
-        transition: transform 0.3s ease;
-      }
+  .button {
+    background-color: #56397b;
+    color: white;
+    padding: 16px 50px;
+    border-radius: 5px;
+    cursor: pointer;
+    border: none;
+    font-size: 1rem;
+    cursor: pointer;
+    transition: background-color 0.3s;
+    margin-top: 348px;
+    z-index: 3;
+    &:hover {
+      background-color: #4a2f6d;
+      color: white;
     }
   }
 }
