--- a/frontend/src/appPages/site/components/pages/home/DirectorContent/DirectorContent.module.scss
+++ b/frontend/src/appPages/site/components/pages/home/DirectorContent/DirectorContent.module.scss
@@ -3,6 +3,7 @@
   margin-top: 40px;
   padding: 80px;
 }
+
 .directorContent {
   display: flex;
   align-items: center;
@@ -17,6 +18,7 @@
     background: #fb8f8f;
     z-index: -1;
   }
+
   .bg1 {
     position: absolute;
     z-index: -2;
@@ -26,6 +28,7 @@
     height: 630;
     background: #fad8d8;
   }
+
   .image {
     position: relative;
     z-index: 99;
@@ -50,6 +53,7 @@
       font-weight: 900;
       color: #333333;
     }
+
     p {
       font-size: 16px;
       font-weight: 400;
@@ -61,24 +65,21 @@
         color: #6a00a1;
       }
     }
-  }
-}
 
-@media (max-width: 430px) {
-  .directorContent {
-    flex-direction: column;
-    .bg2 {
-      display: none;
-    }
-    .bg1 {
-      display: none;
-    }
-    .title {
+    .moreDetailsBtn {
       margin-top: 20px;
-      text-align: center;
-    }
-    .image {
-      margin-top: 20px;
+      padding: 10px 20px;
+      background-color: #6a00a1;
+      color: white;
+      border: none;
+      border-radius: 5px;
+      font-size: 16px;
+      cursor: pointer;
+      transition: background-color 0.3s ease;
+
+      &:hover {
+        background-color: #8000c4;
+      }
     }
   }
 }
@@ -86,10 +87,7 @@
 @media (max-width: 1024px) {
   .directorContent {
     flex-direction: column;
-    .bg2 {
-      display: none;
-    }
-    .bg1 {
+    .bg2, .bg1 {
       display: none;
     }
     .title {
@@ -105,10 +103,7 @@
 @media (max-width: 768px) {
   .directorContent {
     flex-direction: column;
-    .bg2 {
-      display: none;
-    }
-    .bg1 {
+    .bg2, .bg1 {
       display: none;
     }
     .title {
@@ -124,10 +119,7 @@
 @media (max-width: 425px) {
   .directorContent {
     flex-direction: column;
-    .bg2 {
-      display: none;
-    }
-    .bg1 {
+    .bg2, .bg1 {
       display: none;
     }
     .title {
@@ -143,10 +135,7 @@
 @media (max-width: 375px) {
   .directorContent {
     flex-direction: column;
-    .bg2 {
-      display: none;
-    }
-    .bg1 {
+    .bg2, .bg1 {
       display: none;
     }
     .title {
@@ -162,10 +151,7 @@
 @media (max-width: 320px) {
   .directorContent {
     flex-direction: column;
-    .bg2 {
-      display: none;
-    }
-    .bg1 {
+    .bg2, .bg1 {
       display: none;
     }
     .title {
